--- a/_posts/2018-04-17-initial.md
+++ b/_posts/2018-04-17-initial.md
@@ -6,3 +6,5 @@ tags: init
 ---
 Nothing to see here. <br>
 Work in progress.
+
+*Any posts before this one has been migrated from micropenguin.net and was probably written when I was a high school student.*
